fix: overflow in x axis when deatils open

--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,11 @@ body {
   font-family: "Inter", sans-serif;
   background-color: var(--background);
   height: 100dvh;
-  width: 100dvw;
   margin: 0;
 }
 
 main {
-  width: 100dvw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
